Added more patterns for greetings

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real-Time Room</title>
+    <title>Real-Time Watch Party</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="/manifest.json">
 </head>
@@ -26,6 +26,7 @@
                         <button id="endCallBtn" class="control-btn hidden">End Call</button>
                     </div>
                 </div>
+                
                 <div class="game-section">
                     <h3>Chat</h3>
                     <div id="chatMessages"></div>
@@ -35,19 +36,18 @@
                     </div>
                 </div>
             </div>
+
             <div class="right-column">
                 <div class="game-section">
-                    <h3>Choose an Activity</h3>
+                    <h3>Activity Hub</h3>
                     <div class="game-hub">
                         <button id="youtubeWatchBtn" class="game-btn" style="background-color: #ff0000;">YouTube Watch Party</button>
-                        <button id="guessGameBtn" class="game-btn">Word Guessing Game</button>
-                        <button id="chessGameBtn" class="game-btn">Chess Game</button>
                     </div>
                 </div>
                 <div id="gameContainer" class="game-section">
-                    <h3 id="gameTitle">Activity</h3>
+                    <h3 id="gameTitle">YouTube Watch Party</h3>
                     <div id="gameContent">
-                        <p>Select an activity from the hub above.</p>
+                        <p>Click "YouTube Watch Party" to begin synchronized playback.</p>
                     </div>
                 </div>
             </div>
@@ -55,8 +55,5 @@
     </div>
     <script src="script.js"></script>
     <script async src="https://www.youtube.com/iframe_api"></script> 
-
-    <a href="chess/index.html" class="control-btn">Play Chess Game</a>
-
 </body>
 </html>
